RGB Mode (Requires downgrading gsap to a vulnerable version... writing a bug report on that eventually)

--- a/graphics/break.html
+++ b/graphics/break.html
@@ -182,6 +182,7 @@
 <script src="scripts/break/sceneSwitcher.js"></script>
 <script src="scripts/break/stages.js"></script>
 <script src="scripts/break/background.js"></script>
+<script src="scripts/RGBMode.js"></script>
 </body>
 
 </html>
