--- a/graphics/main.html
+++ b/graphics/main.html
@@ -54,5 +54,6 @@
 	<script src="scripts/replicants.js"></script>
 	<script src="scripts/main/scoreboard.js"></script>
 	<script src="scripts/main/casters.js"></script>
+	<script src="scripts/RGBMode.js"></script>
 </body>
 </html>
